--- a/technician.html
+++ b/technician.html
@@ -66,7 +66,8 @@
             window.location.href = 'complaints.html';
         }
 
-        window.onload = loadMonths;
+        document.addEventListener("DOMContentLoaded", loadMonths);
+
     </script>
 </body>
 </html>
