--- a/index.html
+++ b/index.html
@@ -54,33 +54,41 @@
         ];
 
         function loadTechnicians() {
-            const container = document.getElementById('technicians-container');
-            const select = document.getElementById('technician');
-            container.innerHTML = '';
-            select.innerHTML = '';
+    const container = document.getElementById('technicians-container');
+    const select = document.getElementById('technician');
+    container.innerHTML = '';
+    select.innerHTML = ''; // Limpiar dropdown antes de llenarlo
 
-            const complaints = JSON.parse(localStorage.getItem('complaints')) || [];
-            const servicesData = JSON.parse(localStorage.getItem('servicesData')) || {};
+    const complaints = JSON.parse(localStorage.getItem('complaints')) || [];
+    const servicesData = JSON.parse(localStorage.getItem('servicesData')) || {};
 
-            technicians.forEach(tech => {
-                const technicianName = tech.name;
-                const technicianComplaints = complaints.filter(c => c.technician === technicianName).length;
-                let totalServices = 0;
-                if (servicesData[technicianName]) {
-                    totalServices = Object.values(servicesData[technicianName]).reduce((sum, num) => sum + num, 0);
-                }
-                const percentage = totalServices > 0 ? Math.round((technicianComplaints / totalServices) * 100) : 0;
-
-                const div = document.createElement('div');
-                div.className = "bg-gray-700 p-4 rounded-lg text-center";
-                div.innerHTML = `
-                    <p class='font-bold'>${technicianName}</p>
-                    <p>${percentage}% recl.</p>
-                    <button class='bg-blue-600 p-2 rounded mt-2' onclick="openTechnicianPage('${technicianName}')">Ver más</button>
-                `;
-                container.appendChild(div);
-            });
+    technicians.forEach(tech => {
+        const technicianName = tech.name;
+        const technicianComplaints = complaints.filter(c => c.technician === technicianName).length;
+        let totalServices = 0;
+        if (servicesData[technicianName]) {
+            totalServices = Object.values(servicesData[technicianName]).reduce((sum, num) => sum + num, 0);
         }
+        const percentage = totalServices > 0 ? Math.round((technicianComplaints / totalServices) * 100) : 0;
+
+        // Crear cuadro de técnico
+        const div = document.createElement('div');
+        div.className = "bg-gray-700 p-4 rounded-lg text-center";
+        div.innerHTML = `
+            <p class='font-bold'>${technicianName}</p>
+            <p>${percentage}% recl.</p>
+            <button class='bg-blue-600 p-2 rounded mt-2' onclick="openTechnicianPage('${technicianName}')">Ver más</button>
+        `;
+        container.appendChild(div);
+
+        // Agregar técnico al dropdown
+        const option = document.createElement('option');
+        option.value = technicianName;
+        option.textContent = technicianName;
+        select.appendChild(option);
+    });
+}
+
 
         function openTechnicianPage(name) {
     localStorage.setItem('currentTechnician', name);
