--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <option value="Noviembre">Noviembre</option>
                 <option value="Diciembre">Diciembre</option>
             </select>
-            <button id="add-complaint" class="bg-blue-600 p-2 rounded w-full mt-2">Añadir Reclamación</button>
+            <button id="add-complaint" onclick="addComplaint()" class="bg-blue-600 p-2 rounded w-full mt-2">Añadir Reclamación</button>
         </div>
 
         <!-- Promedios Históricos -->
