--- a/complaints.html
+++ b/complaints.html
@@ -67,13 +67,30 @@
         }
 
         function deleteComplaint(index) {
-            const complaints = JSON.parse(localStorage.getItem('complaints')) || [];
-            const filteredComplaints = complaints.filter(c => !(c.technician === technicianName && c.month === currentMonth));
-            filteredComplaints.splice(index, 1);
-            localStorage.setItem('complaints', JSON.stringify([...filteredComplaints, ...complaints.filter(c => c.technician !== technicianName || c.month !== currentMonth)]));
-            alert('Reclamación eliminada.');
-            loadComplaints();
-        }
+    let complaints = JSON.parse(localStorage.getItem('complaints')) || [];
+    const technicianName = localStorage.getItem('currentTechnician');
+    const currentMonth = localStorage.getItem('currentMonth');
+
+    // Filtrar solo las reclamaciones del técnico y mes actual
+    const filteredComplaints = complaints.filter(c => c.technician === technicianName && c.month === currentMonth);
+
+    // Verificar que el índice sea válido
+    if (index >= 0 && index < filteredComplaints.length) {
+        // Eliminar solo la reclamación seleccionada
+        filteredComplaints.splice(index, 1);
+    }
+
+    // Crear una nueva lista de reclamaciones con los cambios aplicados
+    const updatedComplaints = complaints.filter(c => !(c.technician === technicianName && c.month === currentMonth)).concat(filteredComplaints);
+
+    // Guardar la nueva lista en localStorage
+    localStorage.setItem('complaints', JSON.stringify(updatedComplaints));
+
+    // Confirmación visual y recargar lista
+    alert('Reclamación eliminada correctamente.');
+    loadComplaints();
+}
+
 
         loadComplaints();
     </script>
